Atualizando front-end

--- a/index.html
+++ b/index.html
@@ -12,61 +12,63 @@
 
         <h1>Calculadora Js</h1>
 
-        <input type="text">
+        <div id="visor"></div>
 
         <div class="container-btns">
 
             <!-- Linha 1 -->
 
-            <div class="apagar-tudo">C</div>
+            <button class="apagar-tudo">C</button>
 
-            <div class="apagar-um">&lt;</div>
+            <button class="apagar-um">&lt;</button>
 
-            <div class="divisao">/</div>
+            <button class="divisao">/</button>
 
-            <div class="multiplicacao">X</div>
+            <button class="multiplicacao">X</button>
 
             <!-- Linha 1 -->
 
             <!-- Linha 2 -->
 
-            <div class="num7">7</div>
+            <button class="num7" onclick="num7()">7</button>
 
-            <div class="num8">8</div>
+            <button class="num8">8</button>
 
-            <div class="num9">9</div>
+            <button class="num9">9</button>
 
-            <div class="menos">-</div>
+            <button class="menos">-</button>
 
             <!-- Linha 3 -->
 
-            <div class="num4">4</div>
+            <button class="num4">4</button>
 
-            <div class="num5">5</div>
+            <button class="num5">5</button>
 
-            <div class="num6">6</div>
+            <button class="num6">6</button>
 
-            <div class="mais">+</div>
+            <button class="mais">+</button>
 
             <!-- Linha 4 -->
 
-            <div class="num1">1</div>
+            <button class="num1">1</button>
 
-            <div class="num2">2</div>
+            <button class="num2">2</button>
 
-            <div class="num3">3</div>
+            <button class="num3">3</button>
 
-            <div class="igual">=</div>
+            <button class="igual">=</button>
 
             <!-- Linha 5 -->
 
-            <div class="num0">0</div>
+            <button class="num0">0</button>
 
-            <div class="ponto">.</div>
+            <button class="ponto">.</button>
 
         </div>
 
     </div>
+
+    <script src="scripts/app.js"></script>
 
 </body>
 </html>
